# devspace-talk

./: .dockerignore  .gitignore  Makefile  README.md  devspace.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  extensions.py  models.py
backend/migrations/versions/: 3e26347cb4e1_initial_migration.py
database/: Dockerfile
kubernetes/: backend.yml  database.yml
scripts/: get-names  post-name
