[tool.poetry]
name = "devspace-talk-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-Migrate = "^2.6.0"
psycopg2-binary = "^2.8.6"
Flask-SQLAlchemy = "^2.4.4"
SQLAlchemy = "^1.3.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
